Refactor to fix compiling issues

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ include/*
 !main.h
 !config.hpp
 !chessboard.hpp
+!color_spin.hpp
+
+# Auton Selector Files
+src/selection.cpp
 
 # Makefile
 Makefile
